finish dashboard exam

--- a/app/components/molecules/Card/style/CreditCard.css
+++ b/app/components/molecules/Card/style/CreditCard.css
@@ -15,6 +15,7 @@
   font-family: Arial, Helvetica, sans-serif;
   position: relative;
   gap: 15px;
+  height: 100%;
 }
 .logoContainer {
   width: 100%;
