--- a/app/components/molecules/Card/style/DashboardCard.css
+++ b/app/components/molecules/Card/style/DashboardCard.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 15px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   border-style: none;
+  height: 100%;
 }
