--- a/app/components/pages/HomePage/HomePage.css
+++ b/app/components/pages/HomePage/HomePage.css
@@ -1,26 +1,29 @@
 .parent {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-column-gap: 20px;
-  grid-row-gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .div1 {
-  grid-area: 1 / 1 / 2 / 2;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
 .div2 {
-  grid-area: 1 / 2 / 2 / 3;
+  display: flex;
 }
 .div3 {
-  grid-area: 2 / 1 / 3 / 2;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1rem;
 }
-.div4 {
-  grid-area: 3 / 1 / 4 / 2;
+
+.div1 > *,
+.div2 > *,
+.div3 > * {
+  flex-basis: 50%;
 }
-.div5 {
-  grid-area: 3 / 2 / 4 / 3;
-}
+
 .homepage-center-container {
   display: flex;
   width: 100%;
